fixed nav bar being behind image and everything

--- a/includes/style.css
+++ b/includes/style.css
@@ -19,6 +19,7 @@ img{
     width: 100%;
     overflow: hidden;
     top: 0;
+    z-index: 1;
 }
 .navbar a:hover{
     background-color: azure;
